// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`MilestonesAndAnniversaryCard should match snapshot in loading state 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Milestones & Achievements
      </h6>
      <div
        class="MuiBox-root css-11xpnnz"
      >
        <span
          class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-indeterminate css-1txyin7-MuiLinearProgress-root"
          role="progressbar"
        >
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Indeterminate css-lcqqge-MuiLinearProgress-bar1"
          />
          <span
            class="MuiLinearProgress-bar MuiLinearProgress-bar2 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar2Indeterminate css-lfb3c7-MuiLinearProgress-bar2"
          />
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`MilestonesAndAnniversaryCard should match snapshot with full data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-1kw3y0a"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
        >
          Milestones & Achievements
        </h6>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-2mz69a-MuiChip-root"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorPrimary css-1umw9bq-MuiSvgIcon-root"
            data-testid="EmojiEventsIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
            />
          </svg>
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            5 Unlocked
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Total Progress
              </h6>
              <div
                class="MuiStack-root css-8958nc-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    750
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    65
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    320
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Hours
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
              >
                Next Milestones
              </h6>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="TvIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      1,000
                       
                      Episodes
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      75.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="75"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-25%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="LocalMoviesIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      100
                       
                      Movies
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      65.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="65"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-35%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="CalendarTodayIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V8h16z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      500
                       
                      Hours
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      64.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="64"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-36%);"
                  />
                </span>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
              >
                Recent Achievements
              </h6>
              <div
                class="MuiStack-root css-jfdv4h-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-tz9i96"
                  data-mui-internal-clone-element="true"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-l4trt8-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1rr4qq7"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                    >
                      Watched 500 episodes
                    </p>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                    >
                      10/1/2024
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root css-tz9i96"
                  data-mui-internal-clone-element="true"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-l4trt8-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1rr4qq7"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                    >
                      Watched 50 movies
                    </p>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                    >
                      9/15/2024
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1junfry-MuiSvgIcon-root"
                  data-testid="CakeIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 6c1.11 0 2-.9 2-2 0-.38-.1-.73-.29-1.03L12 0l-1.71 2.97c-.19.3-.29.65-.29 1.03 0 1.1.9 2 2 2m4.6 9.99-1.07-1.07-1.08 1.07c-1.3 1.3-3.58 1.31-4.89 0l-1.07-1.07-1.09 1.07C6.75 16.64 5.88 17 4.96 17c-.73 0-1.4-.23-1.96-.61V21c0 .55.45 1 1 1h16c.55 0 1-.45 1-1v-4.61c-.56.38-1.23.61-1.96.61-.92 0-1.79-.36-2.44-1.01M18 9h-5V7h-2v2H6c-1.66 0-3 1.34-3 3v1.54c0 1.08.88 1.96 1.96 1.96.52 0 1.02-.2 1.38-.57l2.14-2.13 2.13 2.13c.74.74 2.03.74 2.77 0l2.14-2.13 2.13 2.13c.37.37.86.57 1.38.57 1.08 0 1.96-.88 1.96-1.96V12C21 10.34 19.66 9 18 9"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  Member Since
                </h6>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1eoqm5i-MuiTypography-root"
              >
                January 15, 2023
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                1 year, 10 months, 26 days
                 ago
              </p>
            </div>
            <div
              class="MuiBox-root css-6210ir"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-172ghww-MuiSvgIcon-root"
                  data-testid="CelebrationIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m2 22 14-5-9-9zm12.53-9.47 5.59-5.59c.49-.49 1.28-.49 1.77 0l.59.59 1.06-1.06-.59-.59c-1.07-1.07-2.82-1.07-3.89 0l-5.59 5.59zm-4.47-5.65-.59.59 1.06 1.06.59-.59c1.07-1.07 1.07-2.82 0-3.89l-.59-.59-1.06 1.07.59.59c.48.48.48 1.28 0 1.76m7 5-1.59 1.59 1.06 1.06 1.59-1.59c.49-.49 1.28-.49 1.77 0l1.61 1.61 1.06-1.06-1.61-1.61c-1.08-1.07-2.82-1.07-3.89 0m-2-6-3.59 3.59 1.06 1.06 3.59-3.59c1.07-1.07 1.07-2.82 0-3.89l-1.59-1.59-1.06 1.06 1.59 1.59c.48.49.48 1.29 0 1.77"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  First Episode Watched
                </h6>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-izap9d-MuiTypography-root"
              >
                Breaking Bad - S1E1: Pilot
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1sa4kq8-MuiTypography-root"
              >
                John
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Jan 20, 2023
                 
                • 
                1 year, 10 months, 21 days
                 ago
              </span>
            </div>
            <div
              class="MuiBox-root css-17y8osf"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4tmu7n-MuiSvgIcon-root"
                  data-testid="LocalMoviesIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  First Movie Watched
                </h6>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-izap9d-MuiTypography-root"
              >
                Inception
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1sa4kq8-MuiTypography-root"
              >
                John
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Feb 1, 2023
                 
                • 
                1 year, 10 months, 9 days
                 ago
              </span>
            </div>
            <div
              class="MuiBox-root css-zqs2nc"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Average Viewing Rate
              </h6>
              <div
                class="MuiStack-root css-19y1cj7-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1c09itd-MuiTypography-root"
                  >
                    1.1
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes/Day
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1c09itd-MuiTypography-root"
                  >
                    2.8
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies/Month
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MilestonesAndAnniversaryCard should match snapshot with large numbers 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-1kw3y0a"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
        >
          Milestones & Achievements
        </h6>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-2mz69a-MuiChip-root"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorPrimary css-1umw9bq-MuiSvgIcon-root"
            data-testid="EmojiEventsIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
            />
          </svg>
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            12 Unlocked
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Total Progress
              </h6>
              <div
                class="MuiStack-root css-8958nc-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    10,000
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    1,000
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    5,000
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Hours
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
              >
                Recent Achievements
              </h6>
              <div
                class="MuiStack-root css-jfdv4h-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-tz9i96"
                  data-mui-internal-clone-element="true"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-l4trt8-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1rr4qq7"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                    >
                      Watched 500 episodes
                    </p>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                    >
                      10/1/2024
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root css-tz9i96"
                  data-mui-internal-clone-element="true"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-l4trt8-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1rr4qq7"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                    >
                      Watched 50 movies
                    </p>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                    >
                      9/15/2024
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1junfry-MuiSvgIcon-root"
                  data-testid="CakeIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 6c1.11 0 2-.9 2-2 0-.38-.1-.73-.29-1.03L12 0l-1.71 2.97c-.19.3-.29.65-.29 1.03 0 1.1.9 2 2 2m4.6 9.99-1.07-1.07-1.08 1.07c-1.3 1.3-3.58 1.31-4.89 0l-1.07-1.07-1.09 1.07C6.75 16.64 5.88 17 4.96 17c-.73 0-1.4-.23-1.96-.61V21c0 .55.45 1 1 1h16c.55 0 1-.45 1-1v-4.61c-.56.38-1.23.61-1.96.61-.92 0-1.79-.36-2.44-1.01M18 9h-5V7h-2v2H6c-1.66 0-3 1.34-3 3v1.54c0 1.08.88 1.96 1.96 1.96.52 0 1.02-.2 1.38-.57l2.14-2.13 2.13 2.13c.74.74 2.03.74 2.77 0l2.14-2.13 2.13 2.13c.37.37.86.57 1.38.57 1.08 0 1.96-.88 1.96-1.96V12C21 10.34 19.66 9 18 9"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  Member Since
                </h6>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1eoqm5i-MuiTypography-root"
              >
                January 15, 2023
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                1 year, 10 months, 26 days
                 ago
              </p>
            </div>
            <div
              class="MuiBox-root css-6210ir"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-172ghww-MuiSvgIcon-root"
                  data-testid="CelebrationIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m2 22 14-5-9-9zm12.53-9.47 5.59-5.59c.49-.49 1.28-.49 1.77 0l.59.59 1.06-1.06-.59-.59c-1.07-1.07-2.82-1.07-3.89 0l-5.59 5.59zm-4.47-5.65-.59.59 1.06 1.06.59-.59c1.07-1.07 1.07-2.82 0-3.89l-.59-.59-1.06 1.07.59.59c.48.48.48 1.28 0 1.76m7 5-1.59 1.59 1.06 1.06 1.59-1.59c.49-.49 1.28-.49 1.77 0l1.61 1.61 1.06-1.06-1.61-1.61c-1.08-1.07-2.82-1.07-3.89 0m-2-6-3.59 3.59 1.06 1.06 3.59-3.59c1.07-1.07 1.07-2.82 0-3.89l-1.59-1.59-1.06 1.06 1.59 1.59c.48.49.48 1.29 0 1.77"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  First Episode Watched
                </h6>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-izap9d-MuiTypography-root"
              >
                Breaking Bad - S1E1: Pilot
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1sa4kq8-MuiTypography-root"
              >
                John
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Jan 20, 2023
                 
                • 
                1 year, 10 months, 21 days
                 ago
              </span>
            </div>
            <div
              class="MuiBox-root css-17y8osf"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4tmu7n-MuiSvgIcon-root"
                  data-testid="LocalMoviesIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  First Movie Watched
                </h6>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-izap9d-MuiTypography-root"
              >
                Inception
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1sa4kq8-MuiTypography-root"
              >
                John
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Feb 1, 2023
                 
                • 
                1 year, 10 months, 9 days
                 ago
              </span>
            </div>
            <div
              class="MuiBox-root css-zqs2nc"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Average Viewing Rate
              </h6>
              <div
                class="MuiStack-root css-19y1cj7-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1c09itd-MuiTypography-root"
                  >
                    14.6
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes/Day
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1c09itd-MuiTypography-root"
                  >
                    43.7
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies/Month
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MilestonesAndAnniversaryCard should match snapshot with null data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1wmifpn-MuiTypography-root"
      >
        Milestones & Achievements
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body2 css-2iyr4a-MuiTypography-root"
      >
        No milestone data available
      </p>
    </div>
  </div>
</div>
`;

exports[`MilestonesAndAnniversaryCard should match snapshot with zero watching data 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-1kw3y0a"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
        >
          Milestones & Achievements
        </h6>
        <div
          aria-label="No achievements unlocked yet"
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-2mz69a-MuiChip-root"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorPrimary css-1umw9bq-MuiSvgIcon-root"
            data-testid="EmojiEventsIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
            />
          </svg>
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            0 Unlocked
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Total Progress
              </h6>
              <div
                class="MuiStack-root css-8958nc-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    0
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    0
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    0
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Hours
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
              >
                Next Milestones
              </h6>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="TvIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      100
                       
                      Episodes
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      0.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-100%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="LocalMoviesIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      25
                       
                      Movies
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      0.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-100%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="CalendarTodayIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V8h16z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      100
                       
                      Hours
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      0.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-100%);"
                  />
                </span>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
              >
                Recent Achievements
              </h6>
              <div
                class="MuiStack-root css-jfdv4h-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-tz9i96"
                  data-mui-internal-clone-element="true"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-l4trt8-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1rr4qq7"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                    >
                      Watched 500 episodes
                    </p>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                    >
                      10/1/2024
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root css-tz9i96"
                  data-mui-internal-clone-element="true"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-l4trt8-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1rr4qq7"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                    >
                      Watched 50 movies
                    </p>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                    >
                      9/15/2024
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1junfry-MuiSvgIcon-root"
                  data-testid="CakeIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 6c1.11 0 2-.9 2-2 0-.38-.1-.73-.29-1.03L12 0l-1.71 2.97c-.19.3-.29.65-.29 1.03 0 1.1.9 2 2 2m4.6 9.99-1.07-1.07-1.08 1.07c-1.3 1.3-3.58 1.31-4.89 0l-1.07-1.07-1.09 1.07C6.75 16.64 5.88 17 4.96 17c-.73 0-1.4-.23-1.96-.61V21c0 .55.45 1 1 1h16c.55 0 1-.45 1-1v-4.61c-.56.38-1.23.61-1.96.61-.92 0-1.79-.36-2.44-1.01M18 9h-5V7h-2v2H6c-1.66 0-3 1.34-3 3v1.54c0 1.08.88 1.96 1.96 1.96.52 0 1.02-.2 1.38-.57l2.14-2.13 2.13 2.13c.74.74 2.03.74 2.77 0l2.14-2.13 2.13 2.13c.37.37.86.57 1.38.57 1.08 0 1.96-.88 1.96-1.96V12C21 10.34 19.66 9 18 9"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  Member Since
                </h6>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1eoqm5i-MuiTypography-root"
              >
                January 15, 2023
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                1 year, 10 months, 26 days
                 ago
              </p>
            </div>
            <div
              class="MuiBox-root css-6210ir"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-172ghww-MuiSvgIcon-root"
                  data-testid="CelebrationIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m2 22 14-5-9-9zm12.53-9.47 5.59-5.59c.49-.49 1.28-.49 1.77 0l.59.59 1.06-1.06-.59-.59c-1.07-1.07-2.82-1.07-3.89 0l-5.59 5.59zm-4.47-5.65-.59.59 1.06 1.06.59-.59c1.07-1.07 1.07-2.82 0-3.89l-.59-.59-1.06 1.07.59.59c.48.48.48 1.28 0 1.76m7 5-1.59 1.59 1.06 1.06 1.59-1.59c.49-.49 1.28-.49 1.77 0l1.61 1.61 1.06-1.06-1.61-1.61c-1.08-1.07-2.82-1.07-3.89 0m-2-6-3.59 3.59 1.06 1.06 3.59-3.59c1.07-1.07 1.07-2.82 0-3.89l-1.59-1.59-1.06 1.06 1.59 1.59c.48.49.48 1.29 0 1.77"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  First Episode Watched
                </h6>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-izap9d-MuiTypography-root"
              >
                Breaking Bad - S1E1: Pilot
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1sa4kq8-MuiTypography-root"
              >
                John
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Jan 20, 2023
                 
                • 
                1 year, 10 months, 21 days
                 ago
              </span>
            </div>
            <div
              class="MuiBox-root css-17y8osf"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4tmu7n-MuiSvgIcon-root"
                  data-testid="LocalMoviesIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  First Movie Watched
                </h6>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-izap9d-MuiTypography-root"
              >
                Inception
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1sa4kq8-MuiTypography-root"
              >
                John
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Feb 1, 2023
                 
                • 
                1 year, 10 months, 9 days
                 ago
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MilestonesAndAnniversaryCard should match snapshot without first episode and movie 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-1kw3y0a"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
        >
          Milestones & Achievements
        </h6>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-2mz69a-MuiChip-root"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorPrimary css-1umw9bq-MuiSvgIcon-root"
            data-testid="EmojiEventsIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
            />
          </svg>
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            5 Unlocked
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Total Progress
              </h6>
              <div
                class="MuiStack-root css-8958nc-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    750
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    65
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    320
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Hours
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
              >
                Next Milestones
              </h6>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="TvIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      1,000
                       
                      Episodes
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      75.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="75"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-25%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="LocalMoviesIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      100
                       
                      Movies
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      65.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="65"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-35%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="CalendarTodayIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V8h16z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      500
                       
                      Hours
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      64.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="64"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-36%);"
                  />
                </span>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
              >
                Recent Achievements
              </h6>
              <div
                class="MuiStack-root css-jfdv4h-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-tz9i96"
                  data-mui-internal-clone-element="true"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-l4trt8-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1rr4qq7"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                    >
                      Watched 500 episodes
                    </p>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                    >
                      10/1/2024
                    </span>
                  </div>
                </div>
                <div
                  class="MuiBox-root css-tz9i96"
                  data-mui-internal-clone-element="true"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-l4trt8-MuiSvgIcon-root"
                    data-testid="EmojiEventsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
                    />
                  </svg>
                  <div
                    class="MuiBox-root css-1rr4qq7"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-bvuapi-MuiTypography-root"
                    >
                      Watched 50 movies
                    </p>
                    <span
                      class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                    >
                      9/15/2024
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1junfry-MuiSvgIcon-root"
                  data-testid="CakeIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 6c1.11 0 2-.9 2-2 0-.38-.1-.73-.29-1.03L12 0l-1.71 2.97c-.19.3-.29.65-.29 1.03 0 1.1.9 2 2 2m4.6 9.99-1.07-1.07-1.08 1.07c-1.3 1.3-3.58 1.31-4.89 0l-1.07-1.07-1.09 1.07C6.75 16.64 5.88 17 4.96 17c-.73 0-1.4-.23-1.96-.61V21c0 .55.45 1 1 1h16c.55 0 1-.45 1-1v-4.61c-.56.38-1.23.61-1.96.61-.92 0-1.79-.36-2.44-1.01M18 9h-5V7h-2v2H6c-1.66 0-3 1.34-3 3v1.54c0 1.08.88 1.96 1.96 1.96.52 0 1.02-.2 1.38-.57l2.14-2.13 2.13 2.13c.74.74 2.03.74 2.77 0l2.14-2.13 2.13 2.13c.37.37.86.57 1.38.57 1.08 0 1.96-.88 1.96-1.96V12C21 10.34 19.66 9 18 9"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  Member Since
                </h6>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1eoqm5i-MuiTypography-root"
              >
                January 15, 2023
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                1 year, 10 months, 26 days
                 ago
              </p>
            </div>
            <div
              class="MuiBox-root css-zqs2nc"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Average Viewing Rate
              </h6>
              <div
                class="MuiStack-root css-19y1cj7-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1c09itd-MuiTypography-root"
                  >
                    1.1
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes/Day
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1c09itd-MuiTypography-root"
                  >
                    2.8
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies/Month
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MilestonesAndAnniversaryCard should match snapshot without recent achievements 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiCard-root css-uqzz15-MuiPaper-root-MuiCard-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <div
      class="MuiCardContent-root css-1lt5qva-MuiCardContent-root"
    >
      <div
        class="MuiBox-root css-1kw3y0a"
      >
        <h6
          class="MuiTypography-root MuiTypography-h6 css-1miy0lu-MuiTypography-root"
        >
          Milestones & Achievements
        </h6>
        <div
          class="MuiChip-root MuiChip-filled MuiChip-sizeSmall MuiChip-colorPrimary MuiChip-filledPrimary css-2mz69a-MuiChip-root"
          data-mui-internal-clone-element="true"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium MuiChip-icon MuiChip-iconSmall MuiChip-iconColorPrimary css-1umw9bq-MuiSvgIcon-root"
            data-testid="EmojiEventsIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 5h-2V3H7v2H5c-1.1 0-2 .9-2 2v1c0 2.55 1.92 4.63 4.39 4.94.63 1.5 1.98 2.63 3.61 2.96V19H7v2h10v-2h-4v-3.1c1.63-.33 2.98-1.46 3.61-2.96C19.08 12.63 21 10.55 21 8V7c0-1.1-.9-2-2-2M5 8V7h2v3.82C5.84 10.4 5 9.3 5 8m14 0c0 1.3-.84 2.4-2 2.82V7h2z"
            />
          </svg>
          <span
            class="MuiChip-label MuiChip-labelSmall css-eccknh-MuiChip-label"
          >
            5 Unlocked
          </span>
        </div>
      </div>
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-spacing-xs-2 css-zjhuaj-MuiGrid-root"
      >
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Total Progress
              </h6>
              <div
                class="MuiStack-root css-8958nc-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    750
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    65
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1ie3cgg-MuiTypography-root"
                  >
                    320
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Hours
                  </span>
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root css-0"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 css-bw1xwk-MuiTypography-root"
              >
                Next Milestones
              </h6>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="TvIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M21 3H3c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h5v2h8v-2h5c1.1 0 1.99-.9 1.99-2L23 5c0-1.1-.9-2-2-2m0 14H3V5h18z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      1,000
                       
                      Episodes
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      75.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="75"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-25%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="LocalMoviesIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      100
                       
                      Movies
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      65.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="65"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-35%);"
                  />
                </span>
              </div>
              <div
                class="MuiBox-root css-1qm1lh"
              >
                <div
                  class="MuiBox-root css-n64gf7"
                >
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <div
                      class="MuiBox-root css-p9qzma"
                    >
                      <svg
                        aria-hidden="true"
                        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1umw9bq-MuiSvgIcon-root"
                        data-testid="CalendarTodayIcon"
                        focusable="false"
                        viewBox="0 0 24 24"
                      >
                        <path
                          d="M20 3h-1V1h-2v2H7V1H5v2H4c-1.1 0-2 .9-2 2v16c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2m0 18H4V8h16z"
                        />
                      </svg>
                    </div>
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
                    >
                      500
                       
                      Hours
                    </p>
                  </div>
                  <div
                    class="MuiBox-root css-axw7ok"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 css-19hrykt-MuiTypography-root"
                    >
                      64.0
                      %
                    </p>
                  </div>
                </div>
                <span
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="64"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate css-1ke4ggo-MuiLinearProgress-root"
                  role="progressbar"
                >
                  <span
                    class="MuiLinearProgress-bar MuiLinearProgress-bar1 MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-l16vtb-MuiLinearProgress-bar1"
                    style="transform: translateX(-36%);"
                  />
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-grid-md-6 css-204a8q-MuiGrid-root"
        >
          <div
            class="MuiStack-root css-1sazv7p-MuiStack-root"
          >
            <div
              class="MuiBox-root css-c90l4a"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1junfry-MuiSvgIcon-root"
                  data-testid="CakeIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M12 6c1.11 0 2-.9 2-2 0-.38-.1-.73-.29-1.03L12 0l-1.71 2.97c-.19.3-.29.65-.29 1.03 0 1.1.9 2 2 2m4.6 9.99-1.07-1.07-1.08 1.07c-1.3 1.3-3.58 1.31-4.89 0l-1.07-1.07-1.09 1.07C6.75 16.64 5.88 17 4.96 17c-.73 0-1.4-.23-1.96-.61V21c0 .55.45 1 1 1h16c.55 0 1-.45 1-1v-4.61c-.56.38-1.23.61-1.96.61-.92 0-1.79-.36-2.44-1.01M18 9h-5V7h-2v2H6c-1.66 0-3 1.34-3 3v1.54c0 1.08.88 1.96 1.96 1.96.52 0 1.02-.2 1.38-.57l2.14-2.13 2.13 2.13c.74.74 2.03.74 2.77 0l2.14-2.13 2.13 2.13c.37.37.86.57 1.38.57 1.08 0 1.96-.88 1.96-1.96V12C21 10.34 19.66 9 18 9"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  Member Since
                </h6>
              </div>
              <h6
                class="MuiTypography-root MuiTypography-h6 MuiTypography-gutterBottom css-1eoqm5i-MuiTypography-root"
              >
                January 15, 2023
              </h6>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1wle3ir-MuiTypography-root"
              >
                1 year, 10 months, 26 days
                 ago
              </p>
            </div>
            <div
              class="MuiBox-root css-6210ir"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-172ghww-MuiSvgIcon-root"
                  data-testid="CelebrationIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="m2 22 14-5-9-9zm12.53-9.47 5.59-5.59c.49-.49 1.28-.49 1.77 0l.59.59 1.06-1.06-.59-.59c-1.07-1.07-2.82-1.07-3.89 0l-5.59 5.59zm-4.47-5.65-.59.59 1.06 1.06.59-.59c1.07-1.07 1.07-2.82 0-3.89l-.59-.59-1.06 1.07.59.59c.48.48.48 1.28 0 1.76m7 5-1.59 1.59 1.06 1.06 1.59-1.59c.49-.49 1.28-.49 1.77 0l1.61 1.61 1.06-1.06-1.61-1.61c-1.08-1.07-2.82-1.07-3.89 0m-2-6-3.59 3.59 1.06 1.06 3.59-3.59c1.07-1.07 1.07-2.82 0-3.89l-1.59-1.59-1.06 1.06 1.59 1.59c.48.49.48 1.29 0 1.77"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  First Episode Watched
                </h6>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-izap9d-MuiTypography-root"
              >
                Breaking Bad - S1E1: Pilot
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1sa4kq8-MuiTypography-root"
              >
                John
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Jan 20, 2023
                 
                • 
                1 year, 10 months, 21 days
                 ago
              </span>
            </div>
            <div
              class="MuiBox-root css-17y8osf"
            >
              <div
                class="MuiBox-root css-1gh5laf"
              >
                <svg
                  aria-hidden="true"
                  class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4tmu7n-MuiSvgIcon-root"
                  data-testid="LocalMoviesIcon"
                  focusable="false"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M18 3v2h-2V3H8v2H6V3H4v18h2v-2h2v2h8v-2h2v2h2V3zM8 17H6v-2h2zm0-4H6v-2h2zm0-4H6V7h2zm10 8h-2v-2h2zm0-4h-2v-2h2zm0-4h-2V7h2z"
                  />
                </svg>
                <h6
                  class="MuiTypography-root MuiTypography-subtitle2 css-1x0mq5c-MuiTypography-root"
                >
                  First Movie Watched
                </h6>
              </div>
              <p
                class="MuiTypography-root MuiTypography-body1 css-izap9d-MuiTypography-root"
              >
                Inception
              </p>
              <p
                class="MuiTypography-root MuiTypography-body2 css-1sa4kq8-MuiTypography-root"
              >
                John
              </p>
              <span
                class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
              >
                Feb 1, 2023
                 
                • 
                1 year, 10 months, 9 days
                 ago
              </span>
            </div>
            <div
              class="MuiBox-root css-zqs2nc"
            >
              <h6
                class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-gutterBottom css-1cveumf-MuiTypography-root"
              >
                Average Viewing Rate
              </h6>
              <div
                class="MuiStack-root css-19y1cj7-MuiStack-root"
              >
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1c09itd-MuiTypography-root"
                  >
                    1.1
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Episodes/Day
                  </span>
                </div>
                <div
                  class="MuiBox-root css-0"
                >
                  <h6
                    class="MuiTypography-root MuiTypography-h6 css-1c09itd-MuiTypography-root"
                  >
                    2.8
                  </h6>
                  <span
                    class="MuiTypography-root MuiTypography-caption css-1374baf-MuiTypography-root"
                  >
                    Movies/Month
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
